# MonoidTalk

./: .gitignore  CMakeLists.txt  plot.py  readme.md
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: LinkThreadPool.cmake
source/: CMakeLists.txt  bakery.cpp  bakery.h  main.cpp  queries.cpp  queries.h
tests/: CMakeLists.txt  tests.cpp  tests.h
